<resources>
    <string name="app_name" translatable="false">Bechakeena</string>
    <string name="preference_file_key" translatable="false">preference_file_key</string>
    <string name="preference_fcm_token" translatable="false">preference_fcm_token</string>
    <string name="preference_access_token" translatable="false">preference_access_token</string>
    <string name="preference_user_id" translatable="false">preference_user_id</string>
    <string name="preference_user_zone_id" translatable="false">preference_user_zone_id</string>
    <string name="preference_user_account" translatable="false">preference_user_account</string>
    <string name="preference_user_type_id" translatable="false">preference_user_type_id</string>
    <string name="preference_user_contact_id" translatable="false">preference_user_contact_id</string>
    <string name="preference_user_address_id" translatable="false">preference_user_address_id</string>
    <string name="preference_language_key" translatable="false">preference_language_key</string>
    <string name="preference_user_phone" translatable="false">preference_user_phone</string>
    <string name="select">Select language</string>
    <string name="welcome">Welcome to Bechakeena</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="label_copyright">Copyright &#169; 2018 All Rights Reserved by Bechakeena</string>
    <string name="title_login">Login</string>
    <string name="label_registration">Registration</string>
    <string name="label_change_pin">Change Pin</string>
    <!--language massage -->
    <string name="label_change_language">Change language</string>
    <string name="label_english" translatable="false">English</string>
    <string name="label_bangla" translatable="false">বাংলা</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="enter_your_shop_name">Enter your shop name</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="title_home">HOME</string>
    <string name="title_categories">CATEGORIES</string>
    <string name="title_brands">BRANDS</string>
    <string name="title_settings">Settings</string>
    <string name="alert_confirm_logout">Are you sure Logout this App?</string>

    <!--error massage -->
    <string name="err_no_internet_connection">No internet connection!</string>
    <string name="err_cart_empty">Please add product!</string>
    <string name="err_msg_shop">Enter your shop name</string>
    <string name="err_msg_name">Enter your name</string>
    <string name="err_msg_zone">Enter your zone</string>
    <string name="err_msg_phone">Enter your phone number</string>
    <string name="err_msg_pin">Enter your pin</string>
    <string name="err_msg_confirm_pin">Pin dosnt match</string>
    <string name="err_msg_pin_length">Your pin too short</string>

    <string name="success">Success</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="err">Error</string>
    <string name="warning">Warning</string>
    <string name="info_want_to_logout">Are you sure you want to log out ?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_new_pin">Enter your new PIN</string>
    <string name="warning_exit_app">Are you sure you want to exit the app</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>
    <string name="err_empty_cart">Cart is empty!</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="search_hint">Type name…</string>
    <string name="enter_your_hr_code">Enter your HR code</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="enter_your_product_name">Enter your product name</string>
    <string name="enter_product_details">Enter product details</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="enter_sell_price">Enter sell price</string>

    <string-array name="unit_array">
        <item>KG</item>
        <item>Bosta</item>
        <item>Litter</item>
        <item>Barrel</item>
    </string-array>

    <string name="lbl_total">Total</string>
    <string name="lbl_total_due">Total Due</string>
    <string name="lbl_total_paid">Total Paid</string>

    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="current_price">CURRENT PRICE</string>
    <string name="quantity">Quantity</string>
    <string name="cart_info_bar_data">%d Items | ৳ %s</string>
    <string name="btn_checkout">CHECKOUT (%s)</string>
    <string name="lbl_item_price_quantity">%s x %d</string>
    <string name="lbl_amount_with_currency">%s : ৳%.2f</string>
    <string name="price_with_currency">৳%.2f</string>

</resources>
