<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/ic_bechakeena_logo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefinsans_regular"
                android:inputType="phone"
                android:hint="@string/enter_your_phone_number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_pin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefinsans_regular"
                android:inputType="numberPassword"
                android:hint="@string/enter_your_pin" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_new_pin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_new_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefinsans_regular"
                android:inputType="numberPassword"
                android:hint="@string/enter_your_new_pin" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_gravity="bottom|end"
            android:background="@drawable/circle_bg_green"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_forward"
            app:tint="@android:color/white" />


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_color"
        android:text="@string/label_copyright"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="10sp"
        android:fontFamily="@font/josefinsans_light" />

</RelativeLayout>