<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eff0f4"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/green">
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_change_language"
            android:fontFamily="@font/josefinsans_regular"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_16sdp"
            android:src="@drawable/ic_close_white"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/layout_english"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="#00000000"
                android:text="@string/label_english"
                android:fontFamily="@font/josefinsans_regular"
                android:textColor="@color/txt_color"
                android:textColorHint="@color/txt_color"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_english"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:tint="@color/green"
                android:src="@drawable/ic_done" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_bangla"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_5sdp">


            <TextView
                android:id="@+id/txt_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="#00000000"
                android:text="@string/label_bangla"
                android:fontFamily="@font/josefinsans_regular"
                android:textColor="@color/txt_color"
                android:textColorHint="@color/txt_color"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_bangla"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:tint="@color/green"
                android:src="@drawable/ic_done" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>