<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/colorWhite">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_logo"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_bechakeena_logo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_6sdp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/input_layout_shop"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8sdp"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_shop"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_your_shop_name"
                                android:inputType="text"
                                android:fontFamily="@font/josefinsans_regular" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/input_layout_phone"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8sdp"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_your_phone_number"
                                android:inputType="phone"
                                android:fontFamily="@font/josefinsans_regular" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/input_layout_name"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8sdp"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_your_name"
                                android:inputType="text"
                                android:fontFamily="@font/josefinsans_regular" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="9">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_layout_zip"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="5"
                                android:layout_marginRight="@dimen/_2sdp"
                                android:layout_marginBottom="@dimen/_8sdp"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edt_zip"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="Enter your zip code"
                                    android:inputType="numberDecimal"
                                    android:fontFamily="@font/josefinsans_regular" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_layout_zone"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="4"
                                android:layout_marginRight="@dimen/_2sdp"
                                android:layout_marginBottom="@dimen/_8sdp"
                                app:errorEnabled="true">

<!--                                android:text="Select Zone"-->

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edt_zone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="Enter Zone"
                                    android:text="Select Zone"
                                    android:focusable="false"
                                    android:clickable="true"
                                    android:inputType="none"
                                    android:drawableRight="@drawable/ic_arrow_down"
                                    android:fontFamily="@font/josefinsans_regular" />

                            </com.google.android.material.textfield.TextInputLayout>


                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/input_layout_address"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8sdp"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_your_address"
                                android:inputType="text"
                                android:fontFamily="@font/josefinsans_regular" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/input_layout_pin"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_pin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_your_pin"
                                android:inputType="numberPassword"
                                android:fontFamily="@font/josefinsans_regular" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/btn_submit"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="bottom|end"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_16sdp"
                            android:background="@drawable/circle_bg_green"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_arrow_forward"
                            android:tint="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>